--- a/package.json
+++ b/package.json
@@ -245,6 +245,7 @@
     "compression": "1.7.2",
     "cross-env": "5.1.4",
     "express": "4.16.3",
+    "file-saver": "^1.3.8",
     "fontfaceobserver": "2.0.13",
     "history": "4.7.2",
     "hoist-non-react-statics": "2.5.0",
@@ -252,6 +253,8 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "jszip": "^3.1.5",
+    "konva": "^2.1.3",
     "lodash": "4.17.5",
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
@@ -259,6 +262,7 @@
     "react-dom": "16.2.0",
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
+    "react-konva": "^1.7.3",
     "react-loadable": "5.3.1",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
@@ -269,6 +273,7 @@
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "2.3.0",
+    "unsplash-js": "^4.8.0",
     "warning": "3.0.0",
     "whatwg-fetch": "2.0.4"
   },
